--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.7.9",
+    "date-fns": "^4.1.0",
+    "firebase": "^11.1.0",
+    "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
     "react-countup": "^6.5.3",
     "react-dom": "^18.3.1",
@@ -18,6 +22,7 @@
     "react-router-dom": "^7.0.2",
     "react-scripts": "5.0.1",
     "react-slick": "^0.30.2",
+    "react-toastify": "^10.0.6",
     "recharts": "^2.14.1",
     "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.4",
