--- a/package.json
+++ b/package.json
@@ -8,9 +8,12 @@
     "@hookform/resolvers": "^3.9.1",
     "@mui/icons-material": "^6.2.0",
     "@mui/material": "^6.2.0",
+    "@stripe/react-stripe-js": "^3.1.0",
+    "@stripe/stripe-js": "^5.3.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.7.9",
     "react": "^18.3.1",
     "react-countup": "^6.5.3",
     "react-dom": "^18.3.1",
@@ -18,6 +21,7 @@
     "react-router-dom": "^7.0.2",
     "react-scripts": "5.0.1",
     "react-slick": "^0.30.2",
+    "react-toastify": "^10.0.6",
     "recharts": "^2.14.1",
     "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.4",
